# mttp_django

./: manage.py  pyproject.toml
mptt_assessment/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
mptt_assessment/Templates/: tree.html
mptt_assessment/migrations/: 0001_initial.py
